add a manifest.json

--- a/config.php.sample
+++ b/config.php.sample
@@ -1,9 +1,10 @@
 <?php
 
 /**
- * COnfig array
+ * Config array
  */
 return [
     "apikey" => "<%SECRET_KEY%>",
     "environment" => "<%ENVIRONMENT%>",
+    "project_name" =>"<%PROJECT_NAME%>"
 ];
